--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -161,6 +161,15 @@ font-family: "Montserrat", sans-serif;
 }
 
 /* ...............TASK 2................... */
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+    margin-left: 156px;
+    margin-top: 36px;
+}
+
 .form-info {
     display: flex;
     flex-direction: column;
@@ -169,15 +178,13 @@ font-family: "Montserrat", sans-serif;
 
 .delay-container {
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
     flex-direction: column;
-    gap: 8px;
-    margin-top: 36px;
-    margin-left: 156px;
 }
 
 .delay-label {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-size: 16px;
@@ -191,4 +198,49 @@ font-family: "Montserrat", sans-serif;
     border-radius: 4px;
     width: 360px;
     height: 40px;
+}
+
+.delay-input:hover {
+    border: 1px solid #000;
+}
+
+.delay-input:focus,
+.delay-input:active {
+    border: 1px solid #4e75ff;
+}
+
+.state-container {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+    border-radius: 4px;
+    stroke-width: 1px;
+    stroke: #808080;
+}
+
+.snackbar-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 10px;
+    border: none;
+    border-radius: 8px;
+    padding: 8px 16px;
+    width: 360px;
+    height: 40px;
+    background: #4e75ff;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #fff;
+}
+
+.snackbar-btn:hover, .snackbar-btn:focus {
+    background: #6c8cff;
 }
